<resources>
    <string name="app_name">DRS</string>
    <string name="startup_text_1">Digital Ration System</string>
    <string name="startup_text_2">A Smart way to Collect your Ration</string>
    <string name="takeOnlyAMoment"> This will take only a moment…</string>
    <string name="verify_txt"> Verify </string>
    <string name="send_otp_txt"> Send OTP </string>
    <string name="otp_instruction">OTP Verification \nis required</string>
    <string name="oneMoreStepToGo">One more step to go</string>
    <string name="fillUp_login_credens">"Fill up you\nlogin credentials"</string>
    <string name="almost_done">Almost done !</string>
    <string name="select_gender">"Select Gender"</string>
    <string name="male">"Male    "</string>
    <string name="female">"Female    "</string>
    <string name="other">"Other    "</string>
    <string name="date_of_birth">"Date Of Birth"</string>
    <string name="state_name"><u>West Bengal</u></string>
    <string name="finish_text">Finish</string>
    <string name="village_municipality">Village/Municipality</string>
    <string name="ward_no">Ward no.</string>
    <string name="dealer_name">Dealer Name</string>
    <string name="dealer_id">Dealer ID</string>
    <string name="signintocontinue">Sign in to continue</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_registered_phoneNo">Enter your phone number\n registered to your Account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_">Forgot password?</string>
    <string name="set_password_for_account">Set a password for your account</string>
    <string name="log_out">Log Out</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="plz_wait">"Please wait…"</string>
    <string name="next">Next</string>
    <string name="link_more_card">Link more\n Ration Card</string>
    <string name="example_text">Example Text</string>
    <string name="acc_details">"Account\n Details"</string>
    <string name="ration_card_id">Ration Card ID</string>
    <string name="start_new_transaction">Start New\n Transaction</string>
    <string name="transaction_history">"Transaction\n History"</string>
    <string name="confirm_and_proceed">Confirm and proceed</string>
    <string name="not_required">not required</string>
    <string name="rice">Rice</string>
    <string name="proceed_to_buy_txt">Proceed to Buy</string>
    <string name="wheat">Wheat</string>
    <string name="sugar">Sugar</string>
    <string name="kerosene_oil">Kerosene Oil</string>
    <string name="subtotal">Subtotal</string>
    <string name="you_are_offline">"You are offline!"</string>
    <string name="are_you_want_to_exit">"Are you sure\nyou want to exit?"</string>
    <string name="exit">Exit</string>
    <string name="settings">Settings</string>
    <string name="email_address">Email Address</string>
    <string name="location_details">Location Details</string>
    <string name="district">District</string>
    <string name="dealer_details">Dealer Details</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="one_ration_card_found">"1 linked ration card found"</string>
    <string name="strong_password_instruction">Use a strong password to keep your account safe.</string>
    <string name="full_name">Full Name</string>
    <string name="password_n_updated">PASSWORD\n UPDATED</string>
    <string name="bill_page_instruction">Please show this QR code to your\nRation Dealer to collect your ration</string>
    <string name="go_to_dashboard">Go to Dashboard</string>
    <string name="str_new_transaction_page_instruction">Select date and time for your ration collection</string>
    <string name="ration_not_collected_yet">You haven\'t collected ration that you booked last time</string>
    <string name="ok_remind_me">OK Remind me</string>
    <string name="back_to_dashboard">Back to Dashboard</string>
    <string name="bill_no_more_valid">"This bill is no longer valid…"</string>
    <string name="view_booking">View Booking</string>
    <string name="ration_claimed">"Ration supplies are claimed…"</string>
    <string name="ration_cannot_be_claimed">"This bill expired\nitems cannot be claimed"</string>
    <string name="total_amount_payable">Total Amount Payable</string>
    <string name="other_payment_methods">Other Payment methods</string>
    <string name="card">Card</string>



    <!-- Variable Strings -->
    <string name="userDashboard_cardID_plus">"%1$s (+%2$s)"</string>
    <string name="signUp_phone_no">" Phone number: %1$s"</string>
    <string name="grocery_price_in_inr">"₹ " %1$s"</string>
    <string name="grocery_qty_in_Kg">"%1$.1f Kg""</string>
    <string name="grocery_qty_in_liters">"%1$.1f Liter""</string>
    <string name="checkOTP_otp_send_to_no">"OTP sent to mobile number %1$s"</string>
    <string name="linkRationCard_multiple_ration_card_found">"%1$d Ration Cards are already linked"</string>
    <string name="userInventor_subtotal">"(%1$d %2$s) ₹ %3$s"</string>
    <string name="need_to_know_its_you">We need to know\n it\'s really you</string>


</resources>