<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/forgotPassword_page_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_vector_1"
    android:transitionName="OverallLayout_Transition"
    tools:context=".activity.ForgotPasswordPage">

    <ImageButton
        android:id="@+id/back_toLogin_page_btn"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:background="@drawable/ic_baseline_arrow_back"
        android:backgroundTint="@color/color_SkyBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01" />

    <ImageView
        android:id="@+id/forgotPassword_img"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@drawable/logo_forgot_password"
        android:transitionName="transition_progress_Image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08" />

    <TextView
        android:id="@+id/forgotPassword_Page_textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/archivo_black"
        android:text="@string/forgot_password"
        android:textColor="#1A82CB"
        android:textSize="30sp"
        android:transitionName="transition_Text2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />



    <TextView
        android:id="@+id/forgotPassword_Page_textView2_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/actor"
        android:text="@string/enter_registered_phoneNo"
        android:textColor="@color/color_PureWhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/verify_mobNo_wrapper"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:hint="@string/mobile_number"
        android:paddingTop="0dp"
        app:counterEnabled="true"
        app:counterMaxLength="13"
        app:startIconDrawable="@android:drawable/ic_menu_call"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.54">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/verify_mobNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLength="13"
            android:textSize="22sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/sendOTP_button_1"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:text="@string/send_otp_txt"
        android:textColor="@color/color_PureWhite"
        android:textSize="18sp"
        app:backgroundTint="#1A82CB"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.68"
        app:strokeColor="@color/colorPrimary"
        app:strokeWidth="1dp" />

    <TextView
        android:id="@+id/forgotPassword_Page_textView2_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/actor"
        android:text="@string/otp_instruction"
        android:textColor="@color/color_PureWhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <com.chaos.view.PinView
        android:id="@+id/verify_otp_pin"
        style="@style/PinWidget.PinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:cursorVisible="true"
        android:inputType="number"
        android:textSize="26sp"
        app:cursorColor="#1A82CB"
        app:hideLineWhenFilled="true"
        app:itemCount="6"
        app:itemHeight="50dp"
        app:itemRadius="6dp"
        app:itemWidth="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53"
        app:lineColor="#1A82CB" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/verifyOTP_button_2"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:text="@string/verify_txt"
        android:textColor="@color/color_PureWhite"
        android:textSize="18sp"
        app:backgroundTint="#1A82CB"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.68"
        app:strokeColor="@color/colorPrimary"
        app:strokeWidth="1dp" />

    <ProgressBar
        android:id="@+id/forgotPassword_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/verify_no_Page_textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please make sure that the phone number is active."
        android:textColor="@color/color_Grey"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.99" />

</androidx.constraintlayout.widget.ConstraintLayout>