<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_vector_login_page"
    tools:context=".activity.LoginPage">

    <ImageView
        android:id="@+id/loginPage_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/png_startup_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04"
        android:transitionName="transition_Image"/>

    <TextView
        android:id="@+id/loginPage_textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/audiowide"
        android:text="@string/startup_text_1"
        android:textColor="#FFEEB2"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPage_image"
        app:layout_constraintVertical_bias="0.05"
        android:transitionName="transition_Text"/>

    <TextView
        android:id="@+id/loginPage_textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signintocontinue"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/layout2"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPage_textView1"
        app:layout_constraintVertical_bias="0.95" />

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.82">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_ID_wrapper"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="Registered Phone Number"
            android:paddingTop="0dp"
            android:transitionName="transition_EditText"
            app:endIconMode="clear_text"
            app:startIconDrawable="@android:drawable/ic_menu_call">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_ID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLength="13"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password_wrapper"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:paddingTop="0dp"
            android:transitionName="transition_EditText"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@android:drawable/ic_lock_idle_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/remember_me_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Remember me"
                android:textColor="@color/color_PureWhite"
                android:buttonTint="@color/color_LeafGreen"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintHorizontal_bias="0.05"/>


            <TextView
                android:id="@+id/forgot_password_tvbtn"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:clickable="true"
                android:paddingTop="8dp"
                android:text="@string/forgot_password_"
                android:textColor="@color/color_RedBrown"
                android:textSize="12sp"
                android:focusable="true"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintHorizontal_bias="0.98"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="7dp"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="@color/color_DeepBlack"
            android:transitionName="transition_go_Button"
            android:textSize="20sp"
            app:backgroundTint="@color/colorPrimary"
            app:cornerRadius="22dp"
            app:strokeColor="@color/colorPrimaryDark"
            app:strokeWidth="1dp"
            />


        <TextView
            android:id="@+id/signUp_page_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="5dp"
            android:paddingTop="8dp"
            android:text="New User?..."
            android:textAlignment="center"
            android:textColor="@color/color_DeepBlue"
            android:textSize="22sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/verify_phone_no_page_button"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/krona_one"
            android:text="@string/sign_up"
            android:textColor="@color/color_PureWhite"
            android:textSize="18sp"
            android:transitionName="transition_signUp_Button"
            app:backgroundTint="@color/color_DeepBlue"
            app:cornerRadius="20dp"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="1dp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>