<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_transaction_parentmost"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient_purple"
    android:transitionName="transition_card_2"
    tools:context=".activity.NewTransactionPage">


    <ImageView
        android:id="@+id/img_trans_1_header"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@drawable/ic_baseline_new_transaction"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035"
        app:tint="@color/color_DeepBlack" />

    <TextView
        android:id="@+id/txt_trans_1_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/archivo_black"
        android:text="@string/start_new_transaction"
        android:textAlignment="center"
        android:textColor="@color/color_DeepBlack"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_trans_1_header"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_new_trans_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/str_new_transaction_page_instruction"
        android:textColor="@color/color_DeepBlack"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_trans_1_header"
        app:layout_constraintVertical_bias="0.0" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/date_select_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="SELECT DATE"
        android:textColor="@color/color_DeepBlack"
        android:textSize="20sp"
        app:cornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_new_trans_info"
        app:layout_constraintVertical_bias="0.0"
        app:strokeColor="@color/color_DeepBlack"
        app:strokeWidth="1dp" />

    <TextView
        android:id="@+id/txt_date_trans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/example_text"
        android:textColor="@color/color_DeepBlack"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_select_button"
        app:layout_constraintVertical_bias="0.0" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/time_slot_select_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="SELECT TIME"
        android:textColor="@color/color_DeepBlack"
        android:textSize="20sp"
        android:visibility="gone"
        app:cornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_date_trans"
        app:layout_constraintVertical_bias="0.05"
        app:strokeColor="@color/color_DeepBlack"
        app:strokeWidth="1dp" />

    <TextView
        android:id="@+id/picked_time_slot_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/example_text"
        android:textColor="@color/color_DeepBlack"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time_slot_select_button"
        app:layout_constraintVertical_bias="0.00" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/date_time_confirm_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/confirm_and_proceed"
        android:textColor="@color/color_DeepBlack"
        android:textSize="20sp"
        android:transitionName="transition_groceries_page"
        android:visibility="gone"
        app:cornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/picked_time_slot_tv"
        app:layout_constraintVertical_bias="0.64"
        app:strokeColor="@color/color_DeepBlack"
        app:strokeWidth="1dp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_time_confirm_button"
        app:layout_constraintVertical_bias="0.99">

        <ImageView
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginTop="3dp"
            android:src="@android:drawable/ic_dialog_info" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:text="You won't be able to change your date &amp; time slot after you confirm"
            android:textSize="12sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
