<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_vector_signup"
    tools:context=".activity.CheckOTP">

    <TextView
        android:id="@+id/verify_otp_Page_textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/audiowide"
        android:text="@string/oneMoreStepToGo"
        android:textColor="@color/colorPrimary"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.05"
        android:transitionName="transition_Text2"/>

    <ImageView
        android:id="@+id/step_2_img"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@drawable/ic_vector_step2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintHorizontal_bias="0.85"
        android:transitionName="transition_progress_Image"/>

    <TextView
        android:id="@+id/verify_otp_Page_textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/actor"
        android:text="@string/otp_instruction"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.27"
        android:transitionName="transition_Text2"/>

    <TextView
        android:id="@+id/verify_otp_Page_textView4"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_slab"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42" />


    <com.chaos.view.PinView
        android:id="@+id/verify_otp_pin"
        style="@style/PinWidget.PinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:cursorVisible="true"
        android:inputType="number"
        app:cursorColor="#9A73E1"
        app:hideLineWhenFilled="true"
        app:itemCount="6"
        app:itemHeight="50dp"
        app:itemRadius="6dp"
        app:itemWidth="50dp"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55"
        app:lineColor="@color/color_FadedBlue" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/verify_otp_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="7dp"
        android:text="@string/verify_txt"
        android:textColor="@color/color_DeepBlack"
        android:transitionName="transition_go_Button"
        android:textSize="21sp"
        app:backgroundTint="@color/colorPrimary"
        app:cornerRadius="22dp"
        app:strokeColor="@color/colorPrimaryDark"
        app:strokeWidth="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.67" />

    <ProgressBar
        android:id="@+id/progress_bar_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/verify_otp_button"
        app:layout_constraintVertical_bias="0.16" />

    <TextView
        android:id="@+id/verify_otp_Page_textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please make sure that the phone number is active."
        android:textColor="@color/color_Grey"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>